// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractItem should render correctly 1`] = `
<StatusCard
  amountInfo={
    <AmountInfo
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
  color="primary"
  label={
    <Label
      color="primary"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
  onPress={[Function]}
  statusInfo={
    <TradeStatusInfo
      color="primary"
      iconId="buy"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
/>
`;

exports[`ContractItem should render correctly with past contract 1`] = `
<StatusCard
  amountInfo={
    <AmountInfo
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "tradeCompleted",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
  color="success"
  label={
    <Label
      color="success"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "tradeCompleted",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
  onPress={[Function]}
  statusInfo={
    <TradeStatusInfo
      color="success"
      iconId="buy"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "tradeCompleted",
          "type": "bid",
          "unreadMessages": 0,
        }
      }
    />
  }
/>
`;

exports[`ContractItem should render correctly with unread messages 1`] = `
<StatusCard
  amountInfo={
    <AmountInfo
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 1,
        }
      }
    />
  }
  color="primary"
  label={
    <Label
      color="primary"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 1,
        }
      }
    />
  }
  onPress={[Function]}
  statusInfo={
    <TradeStatusInfo
      color="primary"
      iconId="buy"
      item={
        {
          "amount": 21000,
          "creationDate": 2021-01-01T00:00:00.000Z,
          "currency": "EUR",
          "disputeOutcomeAcknowledged": false,
          "id": "123-456",
          "isChatActive": false,
          "lastModified": 2021-01-01T00:00:00.000Z,
          "offerId": "offerId",
          "price": 21,
          "tradeStatus": "paymentRequired",
          "type": "bid",
          "unreadMessages": 1,
        }
      }
    />
  }
/>
`;

exports[`OfferItem should render correctly 1`] = `
<StatusCard
  amountInfo={
    <AmountInfo
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "searchingForPeer",
          "type": "bid",
        }
      }
    />
  }
  color="primary-mild"
  label={
    <Label
      color="primary-mild"
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "searchingForPeer",
          "type": "bid",
        }
      }
    />
  }
  onPress={[Function]}
  statusInfo={
    <TradeStatusInfo
      color="primary-mild"
      iconId="xCircle"
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "searchingForPeer",
          "type": "bid",
        }
      }
    />
  }
/>
`;

exports[`OfferItem should render correctly if it's a past offer 1`] = `
<StatusCard
  amountInfo={
    <AmountInfo
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "tradeCompleted",
          "type": "bid",
        }
      }
    />
  }
  color="success"
  label={
    <Label
      color="success"
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "tradeCompleted",
          "type": "bid",
        }
      }
    />
  }
  onPress={[Function]}
  statusInfo={
    <TradeStatusInfo
      color="success"
      iconId="xCircle"
      item={
        {
          "amount": [
            21000,
            210000,
          ],
          "creationDate": 2021-01-01T00:00:00.000Z,
          "id": "id",
          "lastModified": 2021-01-01T00:00:00.000Z,
          "matches": [],
          "tradeStatus": "tradeCompleted",
          "type": "bid",
        }
      }
    />
  }
/>
`;
